src/main/mp/parser/.antlr/MPParser.py
# Generated from d:\HOC\PPL\ass2\assignment2\upload\src\main\mp\parser\MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "'+'", "'*'", "'<>'", 
                     "'<'", "'<='", "'-'", "'/'", "'='", "'>'", "'>='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "';'", "','", 
                     "'['", "']'", "':'", "'..'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURNS", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", "OF", 
                      "REAL", "BOOLEAN", "INTEGER", "STRING", "NOT", "AND", 
                      "OR", "DIV", "MOD", "WITH", "ID", "ASSIGOP", "ADDOP", 
                      "MULOP", "NEQOP", "LTOP", "LTEOP", "SUBOP", "DIVOP", 
                      "EQOP", "GTOP", "GTEOP", "INTLIT", "REALIT", "BOOLIT", 
                      "UNCLOSE_STRING", "STRLIT", "ILLEGAL_ESCAPE", "LB", 
                      "RB", "SEMI", "COMMA", "LSB", "RSB", "COLON", "DDOT", 
                      "WS", "BLOCKCOM_B", "BLOCKCOM_P", "LINECOM", "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDec = 2
    RULE_listOfDecls = 3
    RULE_listOfDecls1 = 4
    RULE_listOfType = 5
    RULE_listID = 6
    RULE_listID1 = 7
    RULE_types = 8
    RULE_arraycp = 9
    RULE_arrayType = 10
    RULE_funcDec = 11
    RULE_paramList = 12
    RULE_paramList1 = 13
    RULE_paramDec = 14
    RULE_compound_st = 15
    RULE_procDec = 16
    RULE_expression = 17
    RULE_exp1 = 18
    RULE_exp2 = 19
    RULE_exp3 = 20
    RULE_exp4 = 21
    RULE_exp5 = 22
    RULE_exp6 = 23
    RULE_exp7 = 24
    RULE_operand = 25
    RULE_indexEx = 26
    RULE_statement = 27
    RULE_assign_st = 28
    RULE_lhs = 29
    RULE_while_st = 30
    RULE_for_st = 31
    RULE_break_st = 32
    RULE_continue_st = 33
    RULE_return_st = 34
    RULE_with_st = 35
    RULE_call_st = 36
    RULE_listOfExp = 37
    RULE_listOfExp1 = 38
    RULE_if_st = 39

    ruleNames =  [ "program", "declaration", "varDec", "listOfDecls", "listOfDecls1", 
                   "listOfType", "listID", "listID1", "types", "arraycp", 
                   "arrayType", "funcDec", "paramList", "paramList1", "paramDec", 
                   "compound_st", "procDec", "expression", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "operand", "indexEx", 
                   "statement", "assign_st", "lhs", "while_st", "for_st", 
                   "break_st", "continue_st", "return_st", "with_st", "call_st", 
                   "listOfExp", "listOfExp1", "if_st" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    RETURNS=10
    WHILE=11
    BEGIN=12
    END=13
    FUNCTION=14
    PROCEDURE=15
    VAR=16
    ARRAY=17
    OF=18
    REAL=19
    BOOLEAN=20
    INTEGER=21
    STRING=22
    NOT=23
    AND=24
    OR=25
    DIV=26
    MOD=27
    WITH=28
    ID=29
    ASSIGOP=30
    ADDOP=31
    MULOP=32
    NEQOP=33
    LTOP=34
    LTEOP=35
    SUBOP=36
    DIVOP=37
    EQOP=38
    GTOP=39
    GTEOP=40
    INTLIT=41
    REALIT=42
    BOOLIT=43
    UNCLOSE_STRING=44
    STRLIT=45
    ILLEGAL_ESCAPE=46
    LB=47
    RB=48
    SEMI=49
    COMMA=50
    LSB=51
    RSB=52
    COLON=53
    DDOT=54
    WS=55
    BLOCKCOM_B=56
    BLOCKCOM_P=57
    LINECOM=58
    ERROR_TOKEN=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.declaration()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 85
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def funcDec(self):
            return self.getTypedRuleContext(MPParser.FuncDecContext,0)


        def procDec(self):
            return self.getTypedRuleContext(MPParser.ProcDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.varDec()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.funcDec()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.procDec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def listOfDecls(self):
            return self.getTypedRuleContext(MPParser.ListOfDeclsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_varDec




    def varDec(self):

        localctx = MPParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MPParser.VAR)
            self.state = 93
            self.listOfDecls()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListOfDeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listOfType(self):
            return self.getTypedRuleContext(MPParser.ListOfTypeContext,0)


        def listOfDecls1(self):
            return self.getTypedRuleContext(MPParser.ListOfDecls1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_listOfDecls




    def listOfDecls(self):

        localctx = MPParser.ListOfDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listOfDecls)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.listOfType()
            self.state = 96
            self.listOfDecls1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListOfDecls1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def listOfType(self):
            return self.getTypedRuleContext(MPParser.ListOfTypeContext,0)


        def listOfDecls1(self):
            return self.getTypedRuleContext(MPParser.ListOfDecls1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_listOfDecls1




    def listOfDecls1(self):

        localctx = MPParser.ListOfDecls1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listOfDecls1)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(MPParser.SEMI)
                self.state = 99
                self.listOfType()
                self.state = 100
                self.listOfDecls1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(MPParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListOfTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listID(self):
            return self.getTypedRuleContext(MPParser.ListIDContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_listOfType




    def listOfType(self):

        localctx = MPParser.ListOfTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listOfType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.listID()
            self.state = 106
            self.match(MPParser.COLON)
            self.state = 107
            self.types()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def listID1(self):
            return self.getTypedRuleContext(MPParser.ListID1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_listID




    def listID(self):

        localctx = MPParser.ListIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(MPParser.ID)
            self.state = 110
            self.listID1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListID1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MPParser.COMMA, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def listID1(self):
            return self.getTypedRuleContext(MPParser.ListID1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_listID1




    def listID1(self):

        localctx = MPParser.ListID1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listID1)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(MPParser.COMMA)
                self.state = 113
                self.match(MPParser.ID)
                self.state = 114
                self.listID1()
                pass
            elif token in [MPParser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def arraycp(self):
            return self.getTypedRuleContext(MPParser.ArraycpContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_types




    def types(self):

        localctx = MPParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_types)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(MPParser.BOOLEAN)
                pass
            elif token in [MPParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(MPParser.INTEGER)
                pass
            elif token in [MPParser.REAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(MPParser.REAL)
                pass
            elif token in [MPParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.match(MPParser.STRING)
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.arraycp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraycpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DDOT(self):
            return self.getToken(MPParser.DDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def arrayType(self):
            return self.getTypedRuleContext(MPParser.ArrayTypeContext,0)


        def SUBOP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBOP)
            else:
                return self.getToken(MPParser.SUBOP, i)

        def getRuleIndex(self):
            return MPParser.RULE_arraycp




    def arraycp(self):

        localctx = MPParser.ArraycpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arraycp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MPParser.ARRAY)
            self.state = 126
            self.match(MPParser.LSB)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 127
                self.match(MPParser.SUBOP)


            self.state = 130
            self.match(MPParser.INTLIT)
            self.state = 131
            self.match(MPParser.DDOT)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 132
                self.match(MPParser.SUBOP)


            self.state = 135
            self.match(MPParser.INTLIT)
            self.state = 136
            self.match(MPParser.RSB)
            self.state = 137
            self.match(MPParser.OF)
            self.state = 138
            self.arrayType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_arrayType




    def arrayType(self):

        localctx = MPParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(MPParser.ParamListContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_st(self):
            return self.getTypedRuleContext(MPParser.Compound_stContext,0)


        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcDec




    def funcDec(self):

        localctx = MPParser.FuncDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MPParser.FUNCTION)
            self.state = 143
            self.match(MPParser.ID)
            self.state = 144
            self.match(MPParser.LB)
            self.state = 145
            self.paramList()
            self.state = 146
            self.match(MPParser.RB)
            self.state = 147
            self.match(MPParser.COLON)
            self.state = 148
            self.types()
            self.state = 149
            self.match(MPParser.SEMI)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 150
                self.varDec()


            self.state = 153
            self.compound_st()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDec(self):
            return self.getTypedRuleContext(MPParser.ParamDecContext,0)


        def paramList1(self):
            return self.getTypedRuleContext(MPParser.ParamList1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_paramList




    def paramList(self):

        localctx = MPParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paramList)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.paramDec()
                self.state = 156
                self.paramList1()
                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamList1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def paramDec(self):
            return self.getTypedRuleContext(MPParser.ParamDecContext,0)


        def paramList1(self):
            return self.getTypedRuleContext(MPParser.ParamList1Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_paramList1




    def paramList1(self):

        localctx = MPParser.ParamList1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_paramList1)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.SEMI]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.match(MPParser.SEMI)
                self.state = 162
                self.paramDec()
                self.state = 163
                self.paramList1()
                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listOfType(self):
            return self.getTypedRuleContext(MPParser.ListOfTypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_paramDec




    def paramDec(self):

        localctx = MPParser.ParamDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_paramDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.listOfType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_stContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(MPParser.BEGIN, 0)

        def END(self):
            return self.getToken(MPParser.END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.StatementContext)
            else:
                return self.getTypedRuleContext(MPParser.StatementContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_compound_st




    def compound_st(self):

        localctx = MPParser.Compound_stContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_compound_st)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(MPParser.BEGIN)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BREAK) | (1 << MPParser.CONTINUE) | (1 << MPParser.FOR) | (1 << MPParser.IF) | (1 << MPParser.RETURNS) | (1 << MPParser.WHILE) | (1 << MPParser.BEGIN) | (1 << MPParser.WITH) | (1 << MPParser.ID) | (1 << MPParser.INTLIT) | (1 << MPParser.REALIT) | (1 << MPParser.BOOLIT) | (1 << MPParser.STRLIT) | (1 << MPParser.LB))) != 0):
                self.state = 171
                self.statement()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self.match(MPParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)
